<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_blue">

    <ImageView
        android:id="@+id/user_image_details"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/user_image_details"
        android:background="@color/withe">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp">

            <LinearLayout
                android:id="@+id/container1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:text="@string/names"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/user_detail_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/container2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/container1"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:text="@string/mails"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/user_detail_mail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/container3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/container2"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:text="@string/phone"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/user_detail_tel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/container4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/container3"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:text="@string/cell"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/user_detail_cel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="31dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/container5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/container4"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:text="@string/location"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:text="@string/country"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/user_detail_country"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="63dp" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:text="@string/state"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/user_detail_state"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:text="@string/city"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/user_detail_city"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="42dp" />

                </LinearLayout>


            </LinearLayout>

            <RelativeLayout
                android:id="@+id/maps_view"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_below="@id/container5"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="30dp">

                <include layout="@layout/activity_maps" />

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>